# zefram

./: .bumpversion.cfg  .hgignore  MANIFEST.in  README.rst  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst
scripts/: getcif.py  printframework.py
zefram/: __init__.py  frameworks.db  zefram.py
