[tool.poetry]
name = "zefram"
version = "0.1.3"
description = "Database of zeolite framework characteristics"
authors = ["Lukasz Mentel <lmmentel@gmail.com>"]
maintainers  = ["Lukasz Mentel <lmmentel@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/lmmentel/zefram"
repository = "https://github.com/lmmentel/zefram"

[tool.poetry.dependencies]
python =  ">=3.8,<3.11"
SQLAlchemy = "^1.4.22"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
